--- a/src/github-activity.css
+++ b/src/github-activity.css
@@ -8,8 +8,8 @@
  */
 
  .gha-feed {
-  width: 100%;
-  height: 100%;
+  width: 725px;
+  height: 600px;
   background: #fff;
   font-weight: bold;
   font-size: 14px;
@@ -17,6 +17,8 @@
   line-height: 1.3;
   overflow-y: auto;
   border: 1px solid #ddd;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
 }
 
 .gha-feed, .gha-feed h2, .gha-feed h3, .gha-feed p, .gha-feed ul, .gha-feed li {
@@ -67,7 +69,8 @@ span.gha-time {
   padding: 0;
   border: 0;
   border-radius: 0;
-  box-shadow: 1px 1px 4px #bbb;
+  -webkit-box-shadow: 1px 1px 4px #bbb;
+          box-shadow: 1px 1px 4px #bbb;
   color: white;
 }
 
@@ -75,34 +78,33 @@ span.gha-time {
   position: absolute;
   top: 1px;
   left: 1px;
-  width: calc(100% - 20px);
+  width: calc(100% - 21px);
   padding: 10px;
-  height: 67px;
+  height: auto;
+  min-height: 67px;
   border-bottom: 1px solid #ddd;
-  background: #ffffff; /* Old browsers */
-  background: -moz-linear-gradient(top,  #ffffff 0%, #f4f4f4 100%); /* FF3.6+ */
+  background: #ffffff; /* Old browsers */ /* FF3.6+ */
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(100%,#f4f4f4)); /* Chrome,Safari4+ */
   background: -webkit-linear-gradient(top,  #ffffff 0%,#f4f4f4 100%); /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(top,  #ffffff 0%,#f4f4f4 100%); /* Opera 11.10+ */
-  background: -ms-linear-gradient(top,  #ffffff 0%,#f4f4f4 100%); /* IE10+ */
+  background: -o-linear-gradient(top,  #ffffff 0%,#f4f4f4 100%); /* Opera 11.10+ */ /* IE10+ */
+  background: -webkit-gradient(linear,  left top, left bottom,  from(#ffffff),to(#f4f4f4));
   background: linear-gradient(to bottom,  #ffffff 0%,#f4f4f4 100%); /* W3C */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#f4f4f4',GradientType=0 ); /* IE6-9 */
 }
 
 .gha-footer {
   position: absolute;
-  bottom: -1px;
+  bottom: 0;
   left: 1px;
   padding: 5px;
   border-top: 1px solid #ddd;
   height: 16px;
-  width: calc(100% - 15px);
-  background: #ffffff; /* Old browsers */
-  background: -moz-linear-gradient(top,  #ffffff 0%, #f4f4f4 100%); /* FF3.6+ */
+  width: calc(100% - 16px);
+  background: #ffffff; /* Old browsers */ /* FF3.6+ */
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(100%,#f4f4f4)); /* Chrome,Safari4+ */
   background: -webkit-linear-gradient(top,  #ffffff 0%,#f4f4f4 100%); /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(top,  #ffffff 0%,#f4f4f4 100%); /* Opera 11.10+ */
-  background: -ms-linear-gradient(top,  #ffffff 0%,#f4f4f4 100%); /* IE10+ */
+  background: -o-linear-gradient(top,  #ffffff 0%,#f4f4f4 100%); /* Opera 11.10+ */ /* IE10+ */
+  background: -webkit-gradient(linear,  left top, left bottom,  from(#ffffff),to(#f4f4f4));
   background: linear-gradient(to bottom,  #ffffff 0%,#f4f4f4 100%); /* W3C */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#f4f4f4',GradientType=0 ); /* IE6-9 */
   color: #495961;
@@ -147,7 +149,8 @@ span.gha-time {
   padding: 3px;
   width: 100%;
   border: 1px solid #ddd;
-  box-shadow: 1px 1px 3px #ccc;
+  -webkit-box-shadow: 1px 1px 3px #ccc;
+          box-shadow: 1px 1px 3px #ccc;
 }
 
 .gha-activity {
@@ -270,3 +273,21 @@ span.gha-time {
 .gha-muted { color: #666; }
 .gha-push  { height: 87px; }
 .gha-push-small  { height: 26px; }
+
+@media (max-width: 1023px) {
+  .gha-feed {
+    width: 100%;
+  }
+  .gha-gravatar {
+    display: none;
+  }
+  .gha-header {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+}
